# ect

./: .buildinfo  .gitignore  ECTResult.html  Makefile  README.md  citing.html  contributing.html  directions.html  ect.html  ect_on_graphs.html  embed_complex.html  embed_cw.html  embed_graph.html  genindex.html  index.html  installation.html  license.html  make.bat  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tutorials.html  validation.html
.doctrees/: ECTResult.doctree  citing.doctree  contributing.doctree  directions.doctree  ect.doctree  ect_on_graphs.doctree  embed_complex.doctree  embed_cw.doctree  embed_graph.doctree  environment.pickle  index.doctree  installation.doctree  license.doctree  modules.doctree  tutorials.doctree  validation.doctree
.github/: CODEOWNERS  pull_request_template.md
Extra_Notebooks/: CodingFiguresFern.ipynb  Matisse_ECT.ipynb  Mesh.ipynb  Playing_with_Spirals.ipynb  tutorial_cw.ipynb  tutorial_graph.ipynb
_modules/: index.html
_sources/: citing.rst.txt  contributing.rst.txt  ect_on_graphs.md.txt  embed_graph.md.txt  installation.rst.txt  modules.rst.txt  tutorials.rst.txt  validation.md.txt
benchmarks/: benchmark_cw.py  benchmark_ect_packages.py  benchmark_graph.py  run_benchmarks.py
data/: leafbw.tif
doc_source/: ECTResult.md  citing.md  citing.rst  conf.py  contributing.rst  directions.md  ect.md  ect_on_graphs.md  embed_complex.md  embed_cw.md  embed_graph.md  index.md  index.rst  installation.md  installation.rst  license.rst  tutorials.md  tutorials.rst  validation.md
docs/: .buildinfo  citing.html  contributing.html  directions.html  ect_on_graphs.html  embed_complex.html  embed_cw.html  embed_graph.html  genindex.html  index.html  license.html  (+9 more)
(+321 files in other folders)
