[project]
name = "ect"
version = "1.0.2"
authors = [
  { name="Liz Munch", email="muncheli@msu.edu" },
]
description = "A python package for computing the Euler Characteristic Transform"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = ["numpy",
            "networkx",
            "matplotlib",
            "numba",
            "scipy",
            "scikit-learn"
            ]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


[project.urls]
Homepage = "https://munchlab.github.io/ect"
Repository = "https://github.com/MunchLab/ect"
Issues = "https://github.com/MunchLab/ect/issues"